<resources>

    <!-- Splash-->
    <string name="app_title">파인딩 오일</string>
    <string name="splash_explain">내 주변 주유소를 단 한번에</string>
    <string name="access_denied">위치 권한이 거부 되었습니다. 앱을 종료 합니다.</string>

    <!-- Main-->
    <string name="sort_price">가격순</string>
    <string name="sort_direct_distance">직경 거리순</string>
    <string name="sort_road_distance">도로 거리순</string>
    <string name="sort_spend_time">소요 시간순</string>

    <string name="home">홈</string>
    <string name="oil_average_price">유가 평균 가격</string>
    <string name="back_press_exit_guide">한 번 더 누르면 종료됩니다.</string>

    <string name="gas_station_img">주유소 이미지</string>
    <string name="navi">내비</string>
    <string name="gas_station_info_detail">주유소 상세 정보</string>
    <string name="car_wash_exist">세차장 유무</string>
    <string name="convenience_store_exist">편의점 유무</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>

    <string name="confirm">확인</string>
    <string name="require_location_permission_guide">"이 앱을 실행하려면 위치 접근 권한이 필요합니다."</string>

    <!-- 정렬 기준 화면-->
    <string name="gas_station_setting">주유소 설정</string>
    <string name="oil_kind">기름 종류</string>
    <string name="distance_setting">내 주변 반경 설정</string>
    <string name="sort_type">정렬 기준</string>

    <string name="data_empty_message">데이터가 비어있거나 서버가 점검 중입니다.</string>

    <!-- 기름 상세 정보 -->
    <string name="lot_address">지번 주소</string>
    <string name="road_address">도로명 주소</string>
    <string name="tel">전화 번호</string>
    <string name="car_wash">세차장</string>
    <string name="conven_store">편의점</string>

    <!-- Price Intel 유가 평균 가격 정보 -->

    <string name="recent_week">최근 일주일</string>
    <string name="price">가격</string>


    <string name="gasoline">휘발유</string>
    <string name="diesel_oil">경유</string>
    <string name="premium_gasoline_line">고급\n휘발유</string>
    <string name="premium_gasoline">고급 휘발유</string>
    <string name="indoor_kerosene">실내 등유</string>
    <string name="car_butane_line">자동차\n부탄</string>
    <string name="car_butane">자동차 부탄</string>
    <string name="won">원</string>

    <string name="gas_station_price">주유소 가격</string>

    <string name="recent_week_price">최근 일주일 전국 유가 가격</string>
    <string name="seven_day_ago">7일전</string>
    <string name="six_day_ago">6일전</string>
    <string name="five_day_ago">5일전</string>
    <string name="four_day_ago">4일전</string>
    <string name="three_day_ago">3일전</string>
    <string name="two_day_ago">2일전</string>
    <string name="one_day_ago">1일전</string>

    <string name="today_oil_price">오늘의 유가</string>
    <string name="line">-</string>

    <!-- OilRepository -->
    <string name="ske">SKE</string>
    <string name="gsx">GSC</string>
    <string name="hdo">HDO</string>
    <string name="sol">SOL</string>
    <string name="rto">RTO</string>
    <string name="rtx">RTX</string>
    <string name="nho">NHO</string>
    <string name="e1h">E1G</string>
    <string name="skg">SKG</string>

    <string name="gasoline_code">B027</string>
    <string name="diesel_oil_code">D047</string>
    <string name="premium_gasoline_code">B034</string>
    <string name="indoor_kerosene_code">C004</string>
    <string name="car_butane_code">K015</string>

    <!-- SettingFragment -->
    <string name="one_km">1km</string>
    <string name="three_km">3km</string>
    <string name="five_km">5km</string>

    <string name="one_km_number">1000</string>
    <string name="three_km_number">3000</string>
    <string name="five_km_number">5000</string>

    <string-array name="oil_Type_Items">
        <item>휘발유</item>
        <item>경유</item>
        <item>고급 휘발유</item>
        <item>실내 등유</item>
        <item>자동차 부탄</item>
    </string-array>

    <string-array name="distance_Type_Items">
        <item>1km</item>
        <item>3km</item>
        <item>5km</item>
    </string-array>

    <string-array name="sort_Items">
        <item>가격순</item>
        <item>직경 거리순</item>
        <item>도로 거리순</item>
        <item>소요 시간순</item>
    </string-array>

</resources>