<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="gasStationInfo"
            type="org.techtown.find_gas_station.domain.model.StationDetailInfo" />

        <variable
            name="callBtnClick"
            type="kotlin.jvm.functions.Function0" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/gasImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setImg="@{gasStationInfo.image}" />


        <TextView
            android:id="@+id/lotAddress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lot_address"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gasImg" />

        <TextView
            android:id="@+id/lotAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{gasStationInfo.lotNumberAdd}"
            android:textColor="#0A65BF"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lotAddress_text" />

        <TextView
            android:id="@+id/roadAddress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/road_address"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lotAddress" />

        <TextView
            android:id="@+id/roadAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{gasStationInfo.roadAdd}"
            android:textColor="#4CAF50"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roadAddress_text" />


        <TextView
            android:id="@+id/tel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tel"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roadAddress" />

        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{gasStationInfo.tel}"
            android:textColor="#4CAF50"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tel_text" />


        <ImageView
            android:id="@+id/call_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no"
            android:onClick="@{() -> callBtnClick.invoke()}"
            android:src="@drawable/ic_baseline_call_24"
            app:layout_constraintBottom_toBottomOf="@+id/tel"
            app:layout_constraintStart_toEndOf="@+id/tel"
            app:layout_constraintTop_toTopOf="@+id/tel" />

        <TextView
            android:id="@+id/carwash_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/car_wash"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tel" />

        <TextView
            android:id="@+id/carWash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="25dp"
            app:layout_constraintStart_toEndOf="@+id/carwash_text"
            app:layout_constraintTop_toTopOf="@+id/carwash_text"
            app:setFeatureStatus="@{gasStationInfo.carWash}" />

        <TextView
            android:id="@+id/conven_store_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/conven_store"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/carWash"
            app:layout_constraintTop_toTopOf="@+id/carwash_text" />

        <TextView
            android:id="@+id/conven_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="25dp"
            app:layout_constraintStart_toEndOf="@+id/conven_store_text"
            app:layout_constraintTop_toTopOf="@+id/conven_store_text"
            app:setFeatureStatus="@{gasStationInfo.conStore}" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/detailMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carwash_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>